Add error message when user tries to load a malformed url instead of silently ignoring it. b=89118 r=ccarlen@netscape.com sr=rpotts@netscape.com